--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <title>MooCells</title>
         <meta content="text/html; charset=UTF-8" />
         
-        <script src="lib/mootools-core-1.3.1-full-nocompat.js"></script>
-        <script src="lib/mootools-more-1.3.1.1.js"></script>
+        <script src="lib/mootools-core-1.4.1-full-nocompat-yc.js"></script>
         <script src="Source/MooCells.js"></script>
         <script type="text/javascript">
         	window.addEvent("domready", function() {
@@ -118,8 +117,8 @@
 		<p>
 			<label for="elementE">cell E: true if D == true</label>
 			<select id="elementE">
-				<option value="">false</option>
-				<option value="ok">trueeeeee</option>
+				<option value=""></option>
+				<option value="ok">D==true, the value of this option is "ok"</option>
 			</select>
 			&#32;
 		</p>
