--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 					},
 					cells: {
 						a : {
-							"el": document.id("elementA"),
-							"dependsOn": ["b"]
+							"el": document.id("elementA")
 						},
 						b : {
 							"el": document.id("elementB"),
