checkbox and radio groups improvements

--- a/index.html
+++ b/index.html
@@ -92,9 +92,46 @@
 								if (cells.checkRowA_value>=cells.checkRowA_check) return "positive";
 								else return "negative";
 							},
-							"dependsOn": ["checkRowA_check", "checkRowA_value"],
+							"dependsOn": ["checkRowA_check", "checkRowA_value"]
 							
+						},
+						radios: {
+							"el": [document.id('radio1'), document.id('radio2'), document.id('radio3')],
+							"format": "string"
+						},
+						radioCellValue: {
+							"el": document.id("radioCellValue"),
+							"format": "string",
+							"value": function(cells) {
+								return cells.radios
+							},
+							"dependsOn": ["radios"]
+						},
+						check1: {
+							el: document.id("check1"),
+							format: "string"
+						},
+						check1value: {
+							el: document.id("check1value"),
+							format: "string",
+							value: function(cells) {
+								return cells.check1;
+							},
+							dependsOn: ["check1"]
+						},
+						check2: {
+							el: document.id("check2"),
+							format: "boolean"
+						},
+						check2value: {
+							el: document.id("check2value"),
+							format: "boolean",
+							value: function(cells) {
+								return cells.check2;
+							},
+							dependsOn: ["check2"]
 						}
+
 					}
 				});
 			});
@@ -144,6 +181,23 @@
 				<td></td>
 			</tr>
 		</table>
-
+		<p>
+			Radios Test. Choose a radio an see the changed value.<br />
+			<input type="radio" name="radioInput" value="first" id="radio1" /><label for="radio1">first,  
+			<input type="radio" name="radioInput" value="second" id="radio2" /><label for="radio2">second,  
+			<input type="radio" name="radioInput" value="third" id="radio3"/><label for="radio3">third | 
+			<span style="background-color: green; color: #000; font-weight: bold;">You chosed: <span id="radioCellValue"></span></span>
+		</p>
+		<p>
+			Checkbox Test.
+		</p>
+		<ul>
+			<li>
+				<input type="checkbox" id="check1" value="check1" /><span id="check1value"></span>
+			</li>
+			<li>
+				<input type="checkbox" id="check2" value="check2" /><span id="check2value"></span>
+			</li>
+		</ul>
 	</body>
 </html>        
