--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </script>
 	</head>
 	<body>
-		<h1>MooCells</h1>
+		<h1><a href="https://github.com/NKjoep/MooCells">MooCells</a></h1>
 		<p>
 			<label for="elementA">cell A</label>
 			<input id="elementA" type="text" value="10" title="a: "/>
@@ -199,6 +199,7 @@
 				<input type="checkbox" id="check2" value="check2" /><span id="check2value"></span>
 			</li>
 		</ul>
+		<a href="https://github.com/NKjoep/MooCells"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 	</body>
 </html>        
 
