--- a/examples/select-to-select.html
+++ b/examples/select-to-select.html
@@ -41,7 +41,7 @@
 			</script>
 	</head>
 	<body>
-		<h1>MooCells</h1>
+		<h1><a href="https://github.com/NKjoep/MooCells">MooCells</a></h1>
 		<p>
 			Example with two select.
 		</p>
@@ -75,6 +75,7 @@
 					</select>
 			</label>
 		</p>
+		<a href="https://github.com/NKjoep/MooCells"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 	</body>
 </html>        
 
